--- a/q/25279.html
+++ b/q/25279.html
@@ -63,12 +63,17 @@
 <tr d-ix="34"><td>107</td><td>Haskell</td><td>140403T210544Z</td><td><a href="https://codegolf.stackexchange.com/questions/25279/remove-a-letter-to-make-a-palindrome/25289#25289">John Dvo</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-nl</code>, 53 bytes</h1>
-<p>Input on stdin, output on stdout. Returning a 0-based index would save a byte.</p>
+<p>Input on stdin, output on stdout.</p>
 <pre class="lang-ruby prettyprint-override"><code>n=-1
 gsub(/./){n=$`.size+1if(a=$`+$')==a.reverse}
 p n
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcnm0km5ejlLsgqWlJWm6FjdN82x1DbnSi0uTNPT19DWr82xVEvSKM6tStQ0z0zQSgTxtFXVNW9tEvaLUstSi4tRargKFPIhmqBkL1hYlJqcWJScWcaXn56RBBAE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Ruby <code>-nl</code>, 49 bytes</h2>
+<p>If we stretch to rules to print a 0-based index or <code>””</code> in the event of no solution, we can get it down to 49 bytes.</p>
+<pre class="lang-ruby prettyprint-override"><code>p gsub(/./){(break$`.size)if(a=$`+$')==a.reverse}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcnm0km5ejlLsgqWlJWm6FjcNCxTSi0uTNPT19DWrNZKKUhOzVRL0ijOrUjUz0zQSbVUStFXUNW1tE_WKUstSi4pTayEaofoXrC1KTE4tSk4s4krPz0mDCAIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Uiua, 20 bytes</h1>
 <pre><code>⍣⊢¯1+1⊚≡(≍⟜⇌▽)⊞≠.⊃⍏¤
