--- a/q/275101.html
+++ b/q/275101.html
@@ -26,33 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Jelly</td><td>240825T171959Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275142#275142">Unrelate</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
 <tr d-ix="1"><td>047</td><td>Haskell</td><td>240824T203417Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275133#275133">DPD-</a></td></tr>
 <tr d-ix="2"><td>059</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
 <tr d-ix="3"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
 <tr d-ix="4"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
-<tr d-ix="5"><td>011</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
-<tr d-ix="6"><td>073</td><td>Python 3</td><td>240823T235659Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275119#275119">xnor</a></td></tr>
-<tr d-ix="7"><td>068</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
-<tr d-ix="8"><td>036</td><td>APL+WIN</td><td>240823T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275115#275115">Graham</a></td></tr>
-<tr d-ix="9"><td>075</td><td>Python 3</td><td>240823T134305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275111#275111">ovs</a></td></tr>
-<tr d-ix="10"><td>060</td><td>C gcc</td><td>240823T125217Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275110#275110">jdt</a></td></tr>
-<tr d-ix="11"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
-<tr d-ix="12"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
+<tr d-ix="5"><td>073</td><td>Python 3</td><td>240823T235659Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275119#275119">xnor</a></td></tr>
+<tr d-ix="6"><td>068</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
+<tr d-ix="7"><td>036</td><td>APL+WIN</td><td>240823T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275115#275115">Graham</a></td></tr>
+<tr d-ix="8"><td>075</td><td>Python 3</td><td>240823T134305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275111#275111">ovs</a></td></tr>
+<tr d-ix="9"><td>060</td><td>C gcc</td><td>240823T125217Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275110#275110">jdt</a></td></tr>
+<tr d-ix="10"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
-<pre><code>r+R,ɗþ/FS
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 11 </s> 9 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<p>-2 thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">Unrelated String</a> (use of the table hyper, <code>þ</code>, to avoid separately taking the Cartesian product with <code>Œp</code>).</p>
+<pre><code>r+R;ɗþ/FS
 </code></pre>
-<p><a href="https://tio.run/##y0rNyan8/79IO0jn5PTD@/Tdgv8XGx1erq8Z@f9/dLSBjoGOoY5RrA6XQrQRkG2mYwhmA8WA0BjMBqkBQjjbFMyOBQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Structurally a port of <a href="https://codegolf.stackexchange.com/a/275133/85334">DPD-'s Haskell solution</a>, but also with no small thanks to the vectorized <code>r</code> trick from <a href="https://codegolf.stackexchange.com/a/275120/85334">Jonathan Allan's Jelly solution</a>. Dyadic link taking <code>[top, left]</code> on the left and <code>[bottom, right]</code> on the right.</p>
-<pre><code>r            The pair of ranges [[top .. bottom], [left .. right]]
-      /      reduced by:
-    ɗþ       table: (row number y on left; column number x on right)
-  R          The inclusive range from 1 to
- +           y + x
-   ,         paired with x.
-       F     Deep flatten
-        S    and sum.
+<p>A dyadic Link that accepts the top-left coordinate on the left (<code>[row, column]</code>) and the bottom-right coordinate on the right (<code>[row, column]</code>) and yields the sum.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8/79IO8j65PTD@/Tdgv///x9tpKNgEPs/2kxHwTAWAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/79IO8j65PTD@/Tdgv8XGx1erq/jcHTSw50zsh41zFGwtVN41DBXM/L//@hoAx0DHUMdo1gdLoVoIyDbTMcQzAaKAaExmA1SA4RAdiwA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
+<h3>How?</h3>
+<p>The value at a given coordinate is the triangle number of the sum of the row and column (the minimum value on its running diagonal) plus its column (the number of steps taken along that diagonal).</p>
+<pre><code>r+R;ɗþ/FS - Link: [Top, Left], [Bottom, Right]
+r         - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
+              -&gt; [[Top..Bottom], [Left..Right]]
+      /   -   reduce by:
+     þ    -     table of:
+    ɗ     -       last three links as a dyad:
+ +        -         {R} add {C} -&gt; R+C
+  R       -         range -&gt; [1..R+C]
+   ;      -         concatenate {C} -&gt; [1,2,...,R+C,C]
+       F  - flatten 
+        S - sum
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Haskell, <a href="https://tio.run/##fc07DsMgEATQ3qeYgiqWEZBPZfsE6VIiCgyxiOJPBLZyfLIcwNEUW8zTTrDp/ZymnEdYDHDwXdpnFlrWa8u5M@2p1wPn3lQBEa60WnIea2dql2f7WtDBrxXw2bfHFu8LGFJYv3RGCIqEQtNAiQOjyNxIkZGXI1SeKJwLuso/YyVkRP4B" rel="nofollow noreferrer"><s>53</s></a> <a href="https://tio.run/##fc09DsIwDAXgnVO8ga3ESsLPRG/AxlhlSB2qIvqDklYs3D04Byh6svyGT3bv0@sxDDl38GjBCHVax6aMIYoVu4q/8aoaT8TuwNJaouBcHv1zQo0w74D3utyXeJuwR@rnj6wOWmJgoRSs3jBWzEWUGHPaQuWIxbGgs/nzrESMzj8" rel="nofollow noreferrer"><s>48</s></a> 47 bytes</h1>
@@ -103,28 +108,7 @@ h r c = sum[0..r+c] + c
 </code></pre>
 <p>Map over the exclusive row range, calculating the value of each cell, then double sum over the results.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 11 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>rŒp+RS+ʋ/€S
-</code></pre>
-<p>A dyadic Link that accepts the top-left coordinate on the left (<code>[row, column]</code>) and the bottom-right coordinate on the right (<code>[row, column]</code>) and yields the sum.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/7/o6KQC7aBg7VPd@o@a1gT///8/2khHwSD2f7SZjoJhLAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/7/o6KQC7aBg7VPd@o@a1gT/LzY6vFxfx@HopIc7Z2Q9apijYGun8Khhrmbk///R0QY6BjqGOkaxOlwK0UZAtpmOIZgNFANCYzAbpAYIgexYAA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
-<h3>How?</h3>
-<p>The value at a given coordinate is the triangle number of the sum of the row and column (the minimum value on its running diagonal) plus its column (the number of steps taken along that diagonal).</p>
-<pre><code>rŒp+RS+ʋ/€S - Link: [Top, Left], [Bottom, Right]
-r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
-                -&gt; [[Top..Bottom], [Left..Right]]
- Œp         - Cartesian product
-                -&gt; all coordinates in the region
-         €  - for each {[R, C] in this region}:
-       ʋ/   -   reduce by last four links as a dyad - f(R, C):
-   +        -     {R} add {C} -&gt; R+C
-    R       -     range -&gt; [1..R+C]
-     S      -     sum -&gt; T(R+C)
-      +     -     {that} add {C}
-          S - sum
-</code></pre>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 73 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 73 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c,d:(e:=c-a)*(f:=d-b)*(e*e+f*f+3*(~a-b-c-d)**2-12*(a+c)-17)/24
 </code></pre>
@@ -141,7 +125,7 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 </code></pre>
 <p><a href="https://tio.run/##NY3bCoMwEESf9SsW@pKYSDWKFItf0vYhN2uoRlFb2q@3m14YGA4zw@70WrvRF4dp3trmvPVyUEaC5IprbmqiU0kTYlKFXiREMsU0MzRJBPt2AT41QhWWminM07yke1Fu7Tj/j4HzcCIZz3jOBeVABGLF84CYoIqAYYCilzqONGvyo0GDHQzyZmF2124F6800Or8uYJ@6vy/uYeNomjEhLfl9o3R7Aw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> <s> 73 </s> <s> 70 </s> 68 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> <s> 73 </s> <s> 70 </s> 68 bytes</h1>
 <p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
 <em>-5 bytes thanks to Lucenaposition.</em><br />
 <em>-1 byte thanks to Arnauld.</em><br />
@@ -153,13 +137,13 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 <p>Takes input like <code>f(inclusiveTopY, exclusiveBottomY, inclusiveLeftX, exclusiveRightX)</code>.<br />
 <a href="https://tio.run/##RcjBDkAgGADgV@lY@Y3lwGzexOUn0aa0ZKuLVw8n3/FzKWyHbTrnsxrGvKOZJJIZJHDsz8vQWCZ@p0qow5NItCUe7bpQjuyb9M9cRJBFZCw7r22gigpooQbxzgM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu7" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for the 3rd and 4th inter as specified in the examples followed by the 1st and 2nd. Index origin = 0</p>
 <pre><code>+/+/⎕↓n↑(⍳m)⊖⊃(+\⍳m)+⍳¨1+⍳m←2×↑n←1+⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv7a@tj5Q6FHb5LxHbRM1HvVuztV81DXtUVezhnYMmKcNJA@tMARRuUB9RoenAxUCFU8ACvVN/Q80het/GpehghGXgYIBVxqXmYIhlxGYZaRgDBZPA8uAMAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3/" rel="noreferrer">Python 3</a>, 75 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="noreferrer">Python 3</a>, 75 bytes</h1>
 <p>Just wanted to see how far a closed formula can go. Uses the same inclusive bounds as in the question, in slightly different order.</p>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c,d:(a+~b)*(c+~d)*((a+b)*(b+3*(c+d)/2+5)+d*(2+d+c)-c*~c+a*~-a)/6
@@ -170,14 +154,14 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 \sum_{x=a}^b \sum_{y=c}^d{x + \frac{\left(x + y\right) (x + y + 1)}2} = \\ \frac{1}{12} (a - b - 1) (c - d - 1) (2 a^2 + a (2 b + 3 c + 3 d + 8) + 2 b^2 + b (3 c + 3 d + 10) + 2 (c^2 + c d + c + d^2 + 2 d))
 $$</span></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 60 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 60 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(x,y,X,Y){x=X?x&lt;X?f(y,x,Y,0)+f(x+1,y,X,Y):0:x-(y+=x)*~y/2;}
 </code></pre>
 <p><a href="https://tio.run/##S9ZNT07@/z9No0KnUidCJ1KzusI2wr7CJsI@TaNSp0InUsdAUxsoq20IlbcysKrQ1ajUtq3Q1Kqr1Deyrv2fmVeikJuYmaehqVDNpQAEBUVAoTQNJdWUmDwlHYU0DQMdBSMwMtfUtAYrKUotKS3KUzCw5qr9DwA" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Simple port of <a href="https://codegolf.stackexchange.com/a/275105/41374">l4m2's answer</a>.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŸŠŸâεηO`D±;*-}O
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle#comment591648_275102"><em>@l4m2</em>'s comment</a> on <a href="https://codegolf.stackexchange.com/a/275102/52210"><em>@squareroot12621</em>'s Python answer</a>, so make sure to upvote that answer, as well as <a href="https://codegolf.stackexchange.com/a/275105/52210"><em>@l4m2</em>'s Javascript answer</a>!</p>
@@ -203,7 +187,7 @@ $$</span></p>
               # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(x,y,X,Y)=&gt;X?x&lt;X&amp;&amp;f(y,x,Y)+f(x+1,y,X,Y):x-(y+=x)*~y/2
 </code></pre>
