--- a/q/275101.html
+++ b/q/275101.html
@@ -50,9 +50,9 @@
 <pre><code>r+R;ɗþ/FS - Link: [Top, Left], [Bottom, Right]
 r         - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
               -&gt; [[Top..Bottom], [Left..Right]]
-      /   -   reduce by:
+      /   -   reduce by - f([Top..Bottom], [Left..Right]):
      þ    -     table of:
-    ɗ     -       last three links as a dyad:
+    ɗ     -       last three links as a dyad - f(R, C):
  +        -         {R} add {C} -&gt; R+C
   R       -         range -&gt; [1..R+C]
    ;      -         concatenate {C} -&gt; [1,2,...,R+C,C]
