--- a/q/275101.html
+++ b/q/275101.html
@@ -43,8 +43,8 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 37 bytes</h1>
 <pre><code>JEKE=GE=TEVrJKVr+GN+TN aY+/*H+1H2N;sY
 </code></pre>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/275102/85474">squareroot12621</a>'s answer. Had to work around the binary NOT.</p>
-<p><a href="https://pyth-docker.azurewebsites.net/?code=J.QVr%40J0%40J1Vr%2BN%40J2%2BN%40J3+aY%2B%2F%2aH%2B1H2N%3BsY&amp;input=0%0A2%0A2%0A7&amp;debug=0" rel="nofollow noreferrer">Try it here</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275102/85474">squareroot12621</a>'s answer. Had to work around the binary <code>NOT</code>.</p>
+<p><a href="https://pyth-docker.azurewebsites.net/?code=JEKE%3DGE%3DTEVrJKVr%2BGN%2BTN+aY%2B%2F%2aH%2B1H2N%3BsY&amp;input=0%0A2%0A2%0A7&amp;debug=0" rel="nofollow noreferrer">Try it here</a></p>
 <pre><code>JEKE=GE=TE                  Assign variables J, K, G, T
 VrJK                        For N in range(J, K)
     Vr+GN+TN                For H in range(G+N, T+N)
