--- a/q/275147.html
+++ b/q/275147.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="0"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
+<tr d-ix="1"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))(
+</code></pre>
+<p>A full program that accepts a string and prints the result.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8/z/z4c6mo5Mf7pyWdaT7UcNcnUeN@zS0Hu7qPtb1cOdikEDWo4Y5mpoa////d0os0tDS1HDLz9cBMnWCCxJzdVzT04vBLE0A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W+(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
 </code></pre>
