--- a/q/275147.html
+++ b/q/275147.html
@@ -34,6 +34,20 @@
 </code></pre>
 <p>A full program that accepts a string and prints the result.</p>
 <p><strong><a href="https://tio.run/##y0rNyan8/z/z4c6mo5Mf7pyWdaT7UcNcnUeN@zS0Hu7qPtb1cOdikEDWo4Y5mpoa////d0os0tDS1HDLz9cBMnWCCxJzdVzT04vBLE0A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h3>How?</h3>
+<pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))( - Main Link: list of characters, S
+ Ṃ                    - minimum {S} -&gt; '('
+i                     - first index of {'('}
+  œṖ                  - partition {S} before {that index}
+            Ɗ         - last three links as a monad - f(S):
+     ċ”,              -   count occurrences of ','
+        ⁾(*           -   &quot;(*&quot;
+           ẋ          -   repeat {&quot;(*&quot;} {count} times -&gt; &quot;(*(*(*...(*&quot;
+    j                 - join {Partitioned S} with {&quot;(*(*(*...(*&quot;}
+             ṣ”,      - split at occurrences of ','
+                j“))( - join with &quot;))(&quot;
+                      - implicit print    
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
