--- a/q/275147.html
+++ b/q/275147.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
-<tr d-ix="1"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="0"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
+<tr d-ix="1"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
+<tr d-ix="2"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
+<p>Replace each <code>,</code> with <code>))(</code> and repeat <code>(*</code> for number of <code>,</code> times.</p>
+<pre><code>{((2*#i)#&quot;(*&quot;)/&quot;(*&quot;\&quot;))(&quot;/i:&quot;,&quot;\x}
+</code></pre>
+<p><a href="https://ngn.codeberg.page/k#eJxLs6rW0DDSUs7UVFbS0FLS1AeRMUqamhpK+plWSjpKMRW1XFxpDkpu+fkaWpoaQEpTCYnvlFgE4QMZUHkdHGJAXAUUBwDpQBuj" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))(
 </code></pre>
 <p>A full program that accepts a string and prints the result.</p>
@@ -49,7 +56,7 @@ i                     - first index of {'('}
                       - implicit print    
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W+(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
 </code></pre>
