--- a/q/275147.html
+++ b/q/275147.html
@@ -26,18 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
-<tr d-ix="1"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
-<tr d-ix="2"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
-<tr d-ix="3"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
+<tr d-ix="2"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
+<tr d-ix="3"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
+<tr d-ix="4"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<pre><code>≔⪪θ,η⪫⪪⪫η))(¦(*⭆η(*
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU8juCAns0SjUEdBSUdJU0chQ9OaK6AoM69Ewys/EyYLZmYAlWhqaoAUKWlogajgEqDCdN/EArAcSExT0/r/f6fEIg0tTQ23/HwdIBOIqzT/65blAAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Port of @akamayu's K answer.</p>
+<pre><code>≔⪪θ,η
+</code></pre>
+<p>Split the input on <code>,</code>. This saves a byte because otherwise extra separators would be needed between the literal strings.</p>
+<pre><code>⪫⪪⪫η))(¦(*⭆η(*
+</code></pre>
+<p>Join that split with <code>))(</code>, then split again on <code>(*</code>, then join with <code>(*</code> repeated for each part of the original split.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
 <pre><code>+`(\).+),
 (*$1))(
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fO0EjRlNPW1OHS0NLxVBTU@P/f7f8fA0tTQ0gpckFZTslFmlyAQmouA4WPhBXaQIA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation: Repeatedly replace each comma in turn from right to left with <code>))(</code>, inserting an extra <code>(*</code> after the return type each time.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
 <p>Replace each <code>,</code> with <code>))(</code> and repeat <code>(*</code> for number of <code>,</code> times.</p>
 <pre><code>{((2*#i)#&quot;(*&quot;)/&quot;(*&quot;\&quot;))(&quot;/i:&quot;,&quot;\x}
 </code></pre>
@@ -50,7 +62,7 @@
  ((2*#i)#&quot;(*&quot;)                        &quot;(*&quot; repeated for 1 + number of &quot;,&quot; times
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))(
 </code></pre>
 <p>A full program that accepts a string and prints the result.</p>
@@ -70,7 +82,7 @@ i                     - first index of {'('}
                       - implicit print    
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W+(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
 </code></pre>
