--- a/q/275147.html
+++ b/q/275147.html
@@ -26,29 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>05AB1E</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>017</td><td>05AB1E legacy</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
 <tr d-ix="1"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
 <tr d-ix="2"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
 <tr d-ix="3"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
 <tr d-ix="4"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
 <tr d-ix="5"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>',¢F'(…(*(.;',…))(:
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>19</s> 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>',¢F„(*x.;',…))(:
 </code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f9fXefQIjd1jUcNyzS0NPSs1XWALE1NDav//50SizS0NDXc8vN1gExNAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXLf3WdQ4vc1DUeNSzT0NLQs1bXAbI0NTWs/tfq/I9WcsvP19DS1ABSmko6MJ5TYhGIB6SgcjpYRYC4SlMpFgA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p>-2 bytes (<code>'(…(*(.;</code> → <code>„(*x.;</code>) switching to the legacy version of 05AB1E (built in Python), where multiply on strings to repeat them works</p>
+<p><a href="https://tio.run/##MzBNTDJM/f9fXefQIrdHDfM0tCr0rNV1HjUs09TUsPr/3ymxSENLU8MtP18HyNQEAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##MzBNTDJM/V9Waa@k8KhtkoKSfaXLf3WdQ4vcHjXM09Cq0LNW13nUsExTU8Pqf63O/2glt/x8DS1NDSClqaQD4zklFoF4QAoqp4NVBIirNJViAQ" rel="nofollow noreferrer">verify all test cases</a>.</p>
 <p><strong>Explanation:</strong></p>
 
-<pre class="lang-python prettyprint-override"><code>',¢                 '# Count how many &quot;,&quot; are in the (implicit) input-string
-   F                 # Pop and loop that many times:
-                     #  (use the implicit inputagain for the first iteration)
-          .;         #  Replace the first
-    '(              '#  &quot;(&quot;
-      …(*(           #  with &quot;(*(&quot;
-                  :  #  And then replace all
-            ',      '#  &quot;,&quot;
-              …))(   #  with &quot;))(&quot;
-                     # (after the loop, the result is output implicitly)
+<pre class="lang-python prettyprint-override"><code>',¢               '# Count how many &quot;,&quot; are in the (implicit) input-string
+   F               # Pop and loop that many times:
+                   #  (use the implicit input again for the first iteration)
+    „(*            #  Push string &quot;(*&quot;
+       x           #  Double it to &quot;(*(*&quot; without popping
+        .;         #  Replace the first &quot;(*&quot; with &quot;(*(*&quot;
+                :  #  And then replace all
+          ',      '#  &quot;,&quot;
+            …))(   #  with &quot;))(&quot;
+                   # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
