--- a/q/275100.html
+++ b/q/275100.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>170</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>166</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 <tr d-ix="1"><td>060</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 <tr d-ix="2"><td>087</td><td>Charcoal</td><td>240825T122525Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275138#275138">Neil</a></td></tr>
 <tr d-ix="3"><td>225</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 170 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 166 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=p=&gt;p&gt;4?&quot;&quot;:(g=(k,M,h=i=&gt;i&gt;23?`
-`+g(k-1,h):&quot;X-O+&quot;[x=i%6,y=i/6,q=p^y^3,h[i++]=M?M[3*(y*25&amp;6)+x^y&amp;1]:p&gt;3?57%~x:[!!q,y,q][x&gt;&gt;1]^!x]+[[`
-`,,&quot; &quot;][i%6]]+h(i))=&gt;k?h``:f(-~p))(7)
+`+g(k-1,h):&quot;X-O+&quot;[x=i%6,y=i/6,q=p^y^3,h[i++]=M?M[3*(y*25&amp;6)+x^y&amp;1]:p&gt;3?57%~x:[!!q,y,q][x&gt;&gt;1]^!x]+[` 
+`[~-x/4]]+h(i))=&gt;k?h``:f(-~p))(7)
 </code></pre>
-<p><a href="https://tio.run/##bVJNb6NADL33V0yRuoJCyMzwMSYVRDMEblUPvVSiRMlSGthmgQJdJVpt/3rWUdu0Wq1kWfazeX728GP9az0Ufd2Nk6Z9KA@Hx7ALoy5y55o20zeh/mRdW1VYh1EdcWe@OluZG/1pwqzKmGl3kxtTy3ZhfeFb@7Ce@tZz2C33S8eqsto08/B6fp05l/r@knvffMPcLfffWD7rImfuiYvX3Sw7P3@29tZznu2iiOXL811uZhkOsSyNaHmGxHluVnptGGH0NK9Wq9mjPnntDEMXxmE6JeWuK4uxfCDty9i9jBZZD@ShPC70HcG6IWNVkqJab7dlsynPirYZxs@PQkJ3AIuvxrn46t8CKVNKPTQMTm1ob/jJn9q4lEAppCl4HlVKKgWMccZoEPA4lkEAccwx9n2KqeNQABCCCyEBuFKUMem6PEk4gFzgLE6FAEk5lZB64KWgGFeMMiWZgsChsc8DR8a@xNiPOaZOIIGDWHCxoMClYoCdbkITFyfIhcAiFQvAdVBtKsGjUiVUJcBczlwIYhkHPIhpHEj0vgNxAI5/PIVAMZzjEbCfudJlkCiJB1kAxZsIDtIDmkJKuSdBuVy5kmFnIgOfxw4NfIgdQO8HNHakE@PmFJc7KhIS@1nCXUUTJkEgK0VeAY09trdjXzcb3TXsvuy266LUp/Z0Y5GChBHRJubdjZYVuWH/XI9FhbXf3P0z3RhXZ@@P3pcDvvejjsgbsO57BBC2h25bj7p239w3mmEP2xrJqUUm7MjW6cNxwvA5NrtvSH4crWnGB3@7Le1tu9GR1B7aftSNT8kGCcPTP/ef6pxoty9FUQ6DRmZES/q@7bV3mR@8/6So2rg6/AU" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bVLbbptAEH3PV2yQUkHAeHe57OAIrF0Mb1Ee8hKJYNklxNC4mACpsKrm192xkjhRVWk0mjlzOHNZfqx/rfuiq9th0uweysPhMWzDqI3cuabN9E2oP1nXVhXWYVRH3JmvzlbmRn@aMKsyZtrd5MbUsjGsL3xrH9ZT33oO2@V@6VhVVptmHl7PrzPnUt9fcu@bb5jjcv@N5bM2cuaeuHgdZ9n5@bO1t57zbIwili/Px9zMVuRslb1Oxqmb52al14YRRk/zarWaPeqT19YwdGEcplNSjm1ZDOUD2b0M7ctgkXVPHsrjMt8RrBsyVCUpqvV2Wzab8qzYNf3w@VFI6Aiw@Gqci6/@LZAypdRDw@BEQ3vDT/5E41ICpZCm4HlUKakUMMYZo0HA41gGAcQxx9j3KaaOQwFACC6EBOBKUcak6/Ik4QBygb04FQIk5VRC6oGXgmJcMcqUZAoCh8Y@DxwZ@xJjP@aYOoEEDmLBxYICl4oBMt2EJi52kAuBRSoWgOvgtKkEj0qVUJUAczlzIYhlHPAgpnEg0fsOxAE4/vEUAofhHI@AfOZKl0GiJB5kARRvIjhID2gKKeWeBOVy5UqGzEQGPo8dGvgQO4DeD2jsSCfGzSkud5xISOSzhLuKJkyCQFWKugIae9jdDl3dbHTXsLuy3a6LUp/a041FChJGRJuYdzdaVuSG/XM9FBXWfnP3z3RjXJ29P3pX9vjejzoib8C66xBA2O7bbT3o2n1z32iG3W9rFKcWmbCjWqv3xw79Z9vsviH5sbWmGR/6u21pb3cbHUXtftcNuvE5skHC8PTP/ac6J9rtS1GUfa@RGdGSrtt12vuYH7r/pDi1cXX4Cw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
