--- a/q/275147.html
+++ b/q/275147.html
@@ -39,6 +39,15 @@
 <pre><code>r&quot;%(%*&quot;È+pUè,Ãr,&quot;))(
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ciIlKCUqIsgrcFXoLMNyLCIpKSg&amp;input=IkJhcigqKShGb28sQmFyLEJheiki" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>r&quot;%(%*&quot;È+pUè,Ãr,&quot;))(     :Implicit input of string U
+r                        :Replace
+ &quot;%(%*&quot;                  :  Regex /\(\*/
+       È                 :  Pass match through the following function
+        +p               :    Append itself repeated
+          Uè,            :      Count of &quot;,&quot; in U times
+             Ã           :End replace
+              r,&quot;))(     :Replace commas with parentheses
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Java, 70 bytes</h1>
 
