--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240826T115211Z
+"   /golfscore                                      20240826T140517Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/157554.html">Cutpoints in a maze                             : 0157554</a>
 <a href="q/506.html">Calculate 500 digits of pi                      : 0000506</a>
 <a href="q/68247.html">Convert a number to Hexadecimal                 : 0068247</a>
 <a href="q/275101.html">Calculate the sum of numbers in a rectangle     : 0275101</a>
