--- a/q/275165.html
+++ b/q/275165.html
@@ -26,15 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>017</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
-<pre><code>œ!2
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
+<pre><code>œ!2Œ!µFṙ1s2E€ẠµƇḢ
 </code></pre>
-<p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCLFkyEyIiwiw4dZIiwiIixbIlwiYWJjXCIiXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
-<h2>Explanation</h2>
-<p>This just uses a built-in. <code>&lt;x&gt; œ! &lt;y&gt;</code> gets all ways of selecting <code>y</code> items from <code>x</code> (without repeating elements), so <code>œ!2</code> just returns all pairs without replacement.</p>
-<p>The built-in <code>Œc</code>, unordered pairs without replacement, is unfortunately unordered, and there is no ordered equivalent.</p>
+<p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCLFkyEyxZIhwrVG4bmZMXMyReKCrOG6oMK1xofhuKIiLCLDh8WS4bmYIiwiIixbIlwiYWJjXCIiXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
+<p>very long and inefficient but i'm leaving this here while i come up with something better since my first submission was incorrect</p>
 </div>
 
 <table id="st">
